--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,3 +11,12 @@ button {
 	font-size: 18px;
 	cursor: pointer;
 }
+
+.center {
+  	display: grid;
+  	justify-content: center;
+}
+
+.center h1 {
+	text-align: center;
+}
