--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<h1>Orbit Report</h1>
+<div class="center">
+	
+	<h1>{{ title }}</h1>
+
+<app-orbit-list [satellites]="displayList"></app-orbit-list>
 
 <div class="search-form">
 	Search: <input #searchTerm type="text" (keyup.enter)="search(searchTerm.value);" name="searchTerm"/>
@@ -8,3 +12,6 @@
 <app-orbit-counts [satellites]="displayList"></app-orbit-counts>
 
 <!-- TODO 1: add list component to app HTML -->
+
+</div>
+
