--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -26,3 +26,11 @@ th, td {
 	margin: 5px 10px;
 	padding: 6px;
 }
+
+tr:nth-child(even) {
+    background-color: #ffebcc;
+}
+
+table tr th {
+	text-align: center;
+}
